--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
               ><em>Angela Yu.</em></a
             ><br />
             Currently based in Brno. <br />
-            <a href="Contact me.html">Contact me here</a>
+            <a href="Contact me.html">Contact me here</a> <br />
+            <a href="https://www.linkedin.com/in/karel-matou%C5%A1ek-03a153241/">Linkedin here</a>
           </p>
           <br />
         </td>
